@@ -256,7 +256,7 @@ FX_ripple_timeout(int val, void *data)
 		       "You have just started the Ripples Effect.\n"
 		       "\n"
 		 "If you look closely on your desktop background, and if it\n"
-		"doesn't have a solid color (ie has a background texture or\n"
+	       "doesn't have a solid colour (ie has a background texture or\n"
 		"image), you will see a pool of water at the bottom of your\n"
 		 "screen that reflects everything above it and \"ripples\".\n"
 		       "\n"
@@ -409,7 +409,7 @@ FX_raindrops_timeout(int val, void *data)
 		  "display because shared pixmaps are not available on this\n"
 			 "X-Server.\n"
 			 "\n"
-		   "This may be due to either the X-Server not implimenting\n"
+		   "This may be due to either the X-Server not implementing\n"
 		       "shared pixmaps, or shared pixmaps being disabled in\n"
 			 "Imlib's configuration.\n"
 			 "\n"
@@ -425,7 +425,7 @@ FX_raindrops_timeout(int val, void *data)
 		       "You have just started the Raindrops Effect.\n"
 		       "\n"
 		 "If you look closely on your desktop background, and if it\n"
-		"doesn't have a solid color (ie has a background texture or\n"
+	       "doesn't have a solid colour (ie has a background texture or\n"
 		 "image), you will see \"raindrops\" hit the background and\n"
 	      "make little splashes. This Effect can be VERY CPU intensive.\n"
 		       "\n"
