@@ -198,7 +198,7 @@ __Emalloc(int size, const char *file, int line)
 		     _("Quit Enlightenment"));
 	Alert(_("WARNING!!!!!!\n"
 		"\n"
-	   "Allocation for %i bytes (%3.0f Kb or %3.1f Mb) did not succeed.\n"
+	   "Allocation for %i bytes (%3.0f kB or %3.1f MB) did not succeed.\n"
 		"\n"
 		"Either this is a bug where ridiculous amounts of memory\n"
 		"are being allocated, or your system has run out of both\n"
