@@ -405,7 +405,7 @@ SetupX()
 		     _("Ignore this error"),
 		     "", _("Quit Enlightenment"));
 	Alert(_("WARNING:\n"
-	     "This is not an X11 Xserver. It infact talks the X%i protocol.\n"
+	    "This is not an X11 Xserver. It in fact talks the X%i protocol.\n"
 		"This may mean Enlightenment will either not function, or\n"
 		"function incorrectly. If it is later than X11, then your\n"
 		"server is one the author of Enlightenment neither have\n"
